<resources>
    <string name="app_name">MedexExpress</string>
    <string name="slogan">Junto por tu Salud </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="texto_ec">Enviar Correo</string>
    <string name="texto_correo">Enviar a:</string>
    <string name="texto_asunto">Asunto:</string>
    <string name="texto_mensaje">Mensaje:</string>
    <string name="texto_btn_enviar">Enviar</string>
</resources>