<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Sugerencia">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="479dp"
        android:background="@android:color/transparent"
        android:src="@drawable/logo"
        android:visibility="visible" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounds"
            android:fontFamily="casual"
            android:padding="12dp"
            android:text="@string/texto_ec"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="24dp" />







    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/texto_correo"
                android:textColor="@color/color5"

                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            >

            <EditText
                android:id="@+id/cajas_correo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="Ejemplo: correo@correo.com"
                android:padding="12dp"
                android:gravity="top"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounds"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_asunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/texto_asunto"
                android:textColor="@color/color5"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cajas_asunto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounds"
                android:gravity="top"
                android:padding="12dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/texto_mensaje"
                android:textColor="@color/color5"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cajas_mensaje"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:gravity="top"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounds"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp">

        <Button
            android:id="@+id/btnn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/color5"
            android:fontFamily="casual"
            android:text="@string/texto_btn_enviar"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>




</RelativeLayout>